--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,5 @@ uvicorn[standard]==0.30.6
 pydantic==2.10.6
 pydantic-settings==2.7.1
 python-multipart==0.0.9
+SQLAlchemy==2.0.36
+psycopg[binary]==3.2.4
