--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,6 @@ pydantic==2.10.6
 pydantic-settings==2.7.1
 python-multipart==0.0.9
 SQLAlchemy==2.0.36
-psycopg[binary]==3.2.4
+alembic==1.13.3
+psycopg2-binary==2.9.11
+
