--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,4 +6,9 @@ python-multipart==0.0.9
 SQLAlchemy==2.0.36
 alembic==1.13.3
 psycopg2-binary==2.9.11
-
+supabase
+pytest
+httpx
+pytest-asyncio
+requests
+google-genai
